tester/src/test/aya/failure/scope/unknown-var.aya.txt
In file $FILE:2:9 ->

  1 | def Nat : \Set | zero
  2 | def p => Nat::suc Nat::zero
               ^------^
  
Error: The qualified name referred to by `Nat::suc` is not defined in the current scope
Resolving interrupted due to error(s).
What are you doing?
